finder/Service.yml
kind: Service
apiVersion: v1
metadata:
  name: finder
  labels:
    app: finder
    service: finder
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: finder
  type: ClusterIP
  sessionAffinity: None
