finder/DestinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: finder
spec:
  host: finder
  subsets:
  - labels:
      version: v10
    name: v10
