finder/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: finder
spec:
  hosts:
  - finder
  http:
  - route:
    - destination:
        host: finder
        subset: v10
